--- a/public/material.html
+++ b/public/material.html
@@ -179,8 +179,8 @@
                             <table class="default">
                                 <tr>
                                     <td>
-                                        <p>El SENA desde su creación ha realizado ejercicios de investigación aplicada en sus procesos de formación, según lo establecido en el Estatuto de Formación Profesional. El objetivo de la investigación en los procesos de formación se enfoca en resolver problemas prácticos, a partir de información primarias o secundarias, análisis de investigaciones y/o desarrollos experimentales que permitan encontrar una solución óptima a los problemas identificados.</p>
-                                        <p>En la formación profesional, la competencia Orientar Investigación Formativa Según Referentes Técnicos, tiene como objetivo que el aprendiz pueda adquirir fundamentos metodológicos en investigación, facilitando así el desarrollo del proyecto formativo y el aprendizaje por proyectos. Desde esta perspectiva la investigación es la base del aprendizaje, nos enseña métodos para organizar el pensamiento, facilita la comprensión de la información, permite descubrir nuevos conocimientos necesarios para el mundo laboral y personal..</p>
+                                        <p>El SENA desde su creación ha realizado ejercicios de investigación aplicada en sus procesos de formación, según lo establecido en el Estatuto de Formación Profesional. El objetivo de la investigación en los procesos de formación se enfoca en resolver problemas prácticos, a partir de información primaria o secundaria, análisis de investigaciones y/o desarrollos experimentales que permitan encontrar una solución óptima a los problemas identificados.</p>
+                                        <p>En la formación profesional, la competencia orientar investigación formativa según referentes técnicos, tiene como objetivo que el aprendiz pueda adquirir fundamentos metodológicos en investigación, facilitando así el desarrollo del proyecto formativo y el aprendizaje por proyectos. Desde esta perspectiva la investigación es la base del aprendizaje, nos enseña métodos para organizar el pensamiento, facilita la comprensión de la información, permite descubrir nuevos conocimientos necesarios para el mundo laboral y personal.</p>
                                     </td>
                                     <td> <img class="img-a my-3 img-icon" src="assets/images/pages/ilustraciones/4.jpg"></td>
                                 </tr>
@@ -234,14 +234,14 @@
                         <table class="table table-bordered table-striped">
                             <thead class="thead-dark">
                                 <tr>
-                                    <th class="text-center">Autor, (año del documento o material), Nombre del documento o material.</th>
+                                    <th class="text-center">Videos complementarios</th>
                                     <th class="text-center">Tipo de material ( Video, capítulo de libro, articulo, otro) </th>
                                     <th class="text-center" style="width:150px">Enlace del Recurso o Archivo del documento o material</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Anexo 1</td>
+                                    <td>Pregunta Investigación</td>
                                     <td>Video</td>
                                     <td> <a href="https://www.youtube.com/watch?v=OJPrmBjwoQA" target="_blank" style="color:#12263F">
                                             <div class="jumbotron bg-grey_1 borde text-sup">
@@ -254,7 +254,7 @@
                                         </a></td>
                                 </tr>
                                 <tr>
-                                    <td>Anexo 2</td>
+                                    <td>Cómo determinar el universo, población y muestra | metodología de la investigación</td>
                                     <td>Video</td>
                                     <td> <a href="https://www.youtube.com/watch?v=3_tW-Cg4BSY" target="_blank" style="color:#12263F">
                                             <div class="jumbotron bg-grey_1 borde text-sup">
@@ -267,7 +267,7 @@
                                         </a></td>
                                 </tr>
                                 <tr>
-                                    <td>Anexo 3</td>
+                                    <td>Calculo del tamaño de la muestra</td>
                                     <td>Video</td>
                                     <td> <a href="https://www.youtube.com/watch?v=cya4JCVPc9w" target="_blank" style="color:#12263F">
                                             <div class="jumbotron bg-grey_1 borde text-sup">
@@ -337,7 +337,7 @@
                         <h4 class="footer-subtitulo-2 mt-0">
                             <div class="fa fa-caret-right mr-2"></div>Contenido Instruccional
                         </h4>
-                        <p class="footer-texto mb-2"><strong>Rafael Nelftalí Lizcano Reyes</strong><br /> <span class="text-small">Asesor pedagógico<br /></span></p>
+                        <p class="footer-texto mb-2"><strong>Rafael Nelftalí Lizcano Reyes</strong><br /> <span class="text-small">Asesor metodológico y pedagógico <br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA </span><br><span class="text-small">Regional Santander </span></p>
                         <p class="footer-texto mb-2"><strong>Marisol Osorio Beltrán</strong><br /><span class="text-small">Experta temática<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de Formación en Diseño Confección y Moda</span><br><span class="text-small">Regional Antioquia</span></p>
@@ -353,6 +353,7 @@
                         <p class="footer-texto"><strong>Francisco José Lizcano Reyes </strong><br /> <span class="text-small">Responsable del equipo<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
                         <p class="footer-texto"><strong>Leyson Fabian Castaño Perez</strong><br /> <span class="text-small">Integración de recursos y pruebas<br /></span><span class="text-small text-uppercase">centro de comercio y servicios </span><br><span class="text-small">Regional Tolima</span></p>
                         <p class="footer-texto"><strong>José Jaime Luis Tang Pinzón </strong><br /> <span class="text-small">Diseñador Web<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
+                        <p class="footer-texto"><strong>Juan Daniel polanco Muñoz</strong><br /> <span class="text-small">Diseñador Web<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
                         <p class="footer-texto"><strong>Oleg Litvin</strong><br /> <span class="text-small">Productor Audiovisual<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
                         <p class="footer-texto"><strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
