--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -54,8 +54,8 @@
                 </div>
             </div>
             <div class="col-6 col-md-6">
-                <P class="mt-5">Se aplican los diferentes métodos de recolección de información, la cual tiene como finalidad, responder la pregunta de investigación planteada.
-                <div class="col-4"><img class="mt-3 img-icon" src="assets/images/pages/ilustraciones/line.jpg" /></div>
+                <P class="mt-5">Se aplican los diferentes métodos de recolección de información,tiene como finalidad, responder la pregunta de investigación planteada.
+                <div class="col-4"><img class="mt-5 img-icon" src="assets/images/pages/ilustraciones/line.jpg" /></div>
                 </P>
             </div>
             <div class="col-6 col-md-6">
@@ -107,19 +107,19 @@
             </div>
         </div>
         <div class="sub-line mt-5"> </div>
-        <h2 id="tema-22">2.2. Enfoques de la investígación<p class="mt-5">El enfoque es la forma metodológica cómo se aborda la idea de investigación y da respuesta a la pregunta de investigación, constituye la estrategia ampliada para abordar el problema. Los enfoques pueden ser de carácter cualitativo cuantitativo y mixto, cada uno tiene sus propias características y finalidades dependiendo de los resultados que se pretenden obtener con la investigación. </p>
+        <h2 id="tema-22">2.2. Enfoques de la investigación<p class="mt-5">El enfoque es la forma metodológica cómo se aborda la idea de investigación y da respuesta a la pregunta de investigación, constituye la estrategia ampliada para abordar el problema. Los enfoques pueden ser de carácter cualitativo cuantitativo y mixto, cada uno tiene sus propias características y finalidades dependiendo de los resultados que se pretenden obtener con la investigación. </p>
         </h2>
         <div class="card-deck">
             <div class="card card_blue">
                 <div class="card-body"><img class="img-a" src="assets/images/pages/ilustraciones/13.png" />
                     <p class="card-text text-center mt-5"><strong>CUALITATIVO</strong></p>
-                    <P class="text-center">Interpreta, describe los fenómenos a partir sus cualidades, puede utilizar algunos datos</P>
+                    <P class="text-center">Interpreta. Describe los fenómenos a partir sus cualidades, puede utilizar algunos datos</P>
                 </div>
             </div>
             <div class="card card_blue_1">
                 <div class="card-body"><img class="img-a" src="assets/images/pages/ilustraciones/14.png" />
                     <p class="card-text text-center mt-5"><strong>CUANTITATIVO</strong></p>
-                    <P class="text-center">Mide, cuantifica a partir de herramientas estadísticas y matemáticas</P>
+                    <P class="text-center">Mide. Cuantifica a partir de herramientas estadísticas y matemáticas</P>
                 </div>
             </div>
             <div class="card card_blue">
@@ -160,14 +160,14 @@
                 <div class="col-auto">
                     <div class="contenedor4"><img class="img-float-1" src="assets/images/pages/ilustraciones/18.jpg" />
                         <div class="texto-encima4"></div>
-                        <p class="centrado4 md-6"> Se denomina objetivo general al fin último de la investigación, éste se construye con base en la pregunta de investigación, debe iniciar con un verbo en infinitivo, indicar el alcance, determinar las variables de operación, y brindar respuesta a la pregunta de investigación. Para entender cómo se construye el objetivo general desde la pregunta observemos el siguiente ejemplo: Identificar las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto. Los objetivos específicos, se plantean como ese conjunto de acciones que permiten cumplir con el objetivo general. Se recomienda que los objetivos específicos oscilan entre tres y cuatro objetivos. Los objetivos deben ser claros, medibles, orientados a la generación de conocimientos, coherentes con el planteamiento del problema y deben contribuir al logro de la investigación. Para mayor claridad es importante tener en cuenta el siguiente ejemplo: Caracterizar las causas de mortalidad infantil en los niños entre 0 y 1 según informes médicos históricos registrados en el Ministerio de Salud.</p>
+                        <p class="centrado4 md-6"> Se denomina objetivo general al fin último de la investigación, éste se construye con base en la pregunta de investigación, debe iniciar con un verbo en infinitivo, indicar el alcance, determinar las variables de operación, y brindar respuesta a la pregunta de investigación. Para entender cómo se construye el objetivo general desde la pregunta observemos el siguiente ejemplo: Identificar las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto. <br /> Los objetivos específicos, se plantean como ese conjunto de acciones que permiten cumplir con el objetivo general. Se recomienda que los objetivos específicos oscilan entre tres y cuatro objetivos. Los objetivos deben ser claros, medibles, orientados a la generación de conocimientos, coherentes con el planteamiento del problema y deben contribuir al logro de la investigación. Para mayor claridad es importante tener en cuenta el siguiente ejemplo: Caracterizar las causas de mortalidad infantil en los niños entre 0 y 1 según informes médicos históricos registrados en el Ministerio de Salud.</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="sub-line mt-5">
             <h2>2.5. Niveles de la investigación</h2>
-            <p>Los niveles determinan la profundidad de la investigación, a mayor profundidad investigativa mayor complejidad y capacidad de análisis e interpretación de los datos por parte del equipo investigador. En la gráfica siguiente, muestra las características de la investigación según su nivel de profundidad. </p>
+            <p>Los niveles determinan la profundidad de la investigación, a mayor profundidad investigativa mayor complejidad y capacidad de análisis e interpretación de los datos por parte del equipo investigador. En la gráfica siguiente, muestran las características de la investigación según su nivel de profundidad. </p>
         </div>
         <div class="row justify-content-center mt-5">
             <div class="col-6 col-md-5">
@@ -175,12 +175,12 @@
             </div>
             <div class="col-6 col-md-5">
                 <div class="col">
-                    <p class="mt-6">Observa, rastrea pregunta Indaga,compara </p>
-                    <p class="mt-6">Observa, rastrea pregunta Indaga,compara </p>
-                    <p class="mt-5">Estudia minuciosamente los hechos para analizarlos y establece nuevas teorías</p>
-                    <p class="mt-5">Explica de forma detallada cada variable estudiada a partir de métodos rigurosos de análisis</p>
-                    <p class="mt-5">Contrasta hipótesis, argumenta sus relaciones desde principios y teoría, demuestra nuevas teorías </p>
-                    <p class="mt-6">Contrasta hipótesis, argumenta sus relaciones desde principios y teoría, demuestra nuevas teorías</p>
+                    <p class="mt-6">Exploratorio: observa, rastrea pregunta indaga, compara </p>
+                    <p class="mt-4">Descriptivo: describe, los hechos a partir de observar, rastrear </p>
+                    <p class="mt-5">Analítico: estudia minuciosamente los hechos para analizarlos y establecer nuevas </p>
+                    <p class="mt-5">Explicativo: explica de forma detallada cada variable estudiada a partir de métodos rigurosos de análsis</p>
+                    <p class="mt-5">Interpretativo: requiere de habilidades y experiencia para interpretar los hechos investigados </p>
+                    <p class="mt-5">Argumentativo: contrasta hipótesis, argumenta sus relaciones desde principios y teoría, demuestra nuevas teorías</p>
                 </div>
             </div>
             <p class="mt-5">Es importante destacar que los objetivos de la investigación determinan su nivel de profundidad, es una relación bidireccional, dependiendo de la profundidad se construyen los objetivos.</p>
@@ -191,14 +191,14 @@
         <div class="jumbotron bg-6 mt-5">
             <div class="row justify-content-center align-items-center">
                 <div class="col">
-                    <p class="mb-0">El término método proviene del griego “meta hacía, hodos camino, el camino más adecuado para tal fin’'. Los métodos son el conjunto de procedimientos específicos teóricos como prácticos que determinan la forma como se realizará la investigación.</p>
+                    <p class="mb-0">El término método proviene del griego “meta-hacía, hodós-camino, el camino más adecuado hacia un fin’'. Los métodos son el conjunto de procedimientos específicos teóricos como prácticos que determinan la forma como se realizará la investigación. </p>
                 </div>
             </div>
         </div>
         <div class="row justify-content-center mt-5">
             <div class="col-6 col-md-6">
                 <div class="header-arrow_1">
-                    <h1 class="text-center">METODOS</h1>
+                    <h1 class="text-center">MÉTODOS</h1>
                 </div>
                 <div class="row justify-content-center align-items-center">
                     <div class="col-4"> <img class="img-a img-icon" src="assets/images/pages/ilustraciones/01.jpg" /></div>
@@ -210,7 +210,7 @@
             </div>
             <div class="col-6 col-md-6">
                 <div class="header-arrow_1">
-                    <h1 class="text-center">CARACTERISTICAS </h1>
+                    <h1 class="text-center">CARACTERÍSTICAS </h1>
                 </div>
                 <p class="mt-5">Presenta un desarrollo lógico, observa, resuelve hipótesis, experimenta contrasta teorías y concluye
                 <div class="col-4"><img class="mt-5 img-icon" src="assets/images/pages/ilustraciones/line.jpg" /></div>
@@ -381,24 +381,24 @@
             <tbody>
                 <tr>
                     <td class="table2 color-text"> NIVEL INVESTIGATIVO</td>
-                    <td>Exploratorio Descriptivo <br /> Analítico Explicativo </td>
-                    <td>Interpretativo Argumentativo </td>
+                    <td>Exploratorio <br />Descriptivo <br /> Analítico <br /> Explicativo </td>
+                    <td>Interpretativo<br />Argumentativo </td>
                     <td>Cuali-cuantitativo </td>
                 </tr>
             </tbody>
             <tbody>
                 <tr class="table1">
                     <td class="table2 color-text"> MÉTODO</td>
-                    <td>Científico Experimental <br />Correlacional Estadístico </td>
-                    <td>Etnográfico, Hermenéutico <br /> Fenomenológico Histórico </td>
+                    <td>Científico<br /> Experimental <br />Correlacional<br />Estadístico </td>
+                    <td>Etnográfico<br /> Hermenéutico <br /> Fenomenológico <br />Histórico </td>
                     <td>Cuali-cuantitativo </td>
                 </tr>
             </tbody>
             <tbody>
                 <tr>
                     <td class="table2 color-text"> TIPO DE INSTRUMENTO</td>
-                    <td>Encuesta Test Observaciones <br /> a partir de indicadores</td>
-                    <td>Entrevistas Testimonios Observaciones <br /> (participantes) Historias de vidaDiarios de campo Talleres Conversatorios </td>
+                    <td>Encuesta<br /> Test<br /> Observaciones <br /> a partir de indicadores</td>
+                    <td>Entrevistas<br /> Testimonios Observaciones <br /> (participantes)<br /> Historias de vida <br />Diarios de campo <br /> Talleres<br />Conversatorios</td>
                     <td>En sus técnicas combina instrumentos de investigación</td>
                 </tr>
             </tbody>
