--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -14,12 +14,12 @@
             <div class="card-deck">
                 <div class="card card_grey">
                     <div class="card-body"><img class="img-a img-icon" src="assets/images/pages/ilustraciones/head.png" />
-                        <P class="text left mt-5">Las fuentes primarias son documentos que no han sido editados, reinterpretados o restructurado por otros investigadores, entre los más destacados son: revistas, testimonios orales, pinturas, archivos multimedios pintura o grabaciones de primera mano, cartas entre otras. Sus principales características es su originalidad como evidencia directa de su autordatos </P>
+                        <P class="text left mt-5">Las fuentes primarias son documentos que no han sido editados, reinterpretados o restructurados por otros investigadores, entre los más destacados están, revistas, testimonios orales, pinturas, archivos multimedios pintura o grabaciones de primera mano, cartas entre otras. Sus principales características son su originalidad como evidencia directa de su autor.</P>
                     </div>
                 </div>
                 <div class="card card_grey">
                     <div class="card-body"><img class="img-a img-icon" src="assets/images/pages/ilustraciones/book.png" />
-                        <P class="text left mt-5">Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras.</P>
+                        <P class="text left mt-5">Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras</P>
                     </div>
                 </div>
             </div>
