--- a/public/pages/material-complementario.html
+++ b/public/pages/material-complementario.html
@@ -6,14 +6,14 @@
         <table class="table table-bordered table-striped">
             <thead class="thead-dark">
                 <tr>
-                    <th class="text-center">Autor, (año del documento o material), Nombre del documento o material.</th>
+                    <th class="text-center">Videos complementarios</th>
                     <th class="text-center">Tipo de material ( Video, capítulo de libro, articulo, otro) </th>
                     <th class="text-center" style="width:150px">Enlace del Recurso o Archivo del documento o material</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Anexo 1</td>
+                    <td>Pregunta Investigación</td>
                     <td>Video</td>
                     <td> <a href="https://www.youtube.com/watch?v=OJPrmBjwoQA" target="_blank" style="color:#12263F">
                             <div class="jumbotron bg-grey_1 borde text-sup">
@@ -26,7 +26,7 @@
                         </a></td>
                 </tr>
                 <tr>
-                    <td>Anexo 2</td>
+                    <td>Cómo determinar el universo, población y muestra | metodología de la investigación</td>
                     <td>Video</td>
                     <td> <a href="https://www.youtube.com/watch?v=3_tW-Cg4BSY" target="_blank" style="color:#12263F">
                             <div class="jumbotron bg-grey_1 borde text-sup">
@@ -39,7 +39,7 @@
                         </a></td>
                 </tr>
                 <tr>
-                    <td>Anexo 3</td>
+                    <td>Calculo del tamaño de la muestra</td>
                     <td>Video</td>
                     <td> <a href="https://www.youtube.com/watch?v=cya4JCVPc9w" target="_blank" style="color:#12263F">
                             <div class="jumbotron bg-grey_1 borde text-sup">
