--- a/public/ruta.html
+++ b/public/ruta.html
@@ -139,7 +139,7 @@
                         <h4 class="footer-subtitulo-2 mt-0">
                             <div class="fa fa-caret-right mr-2"></div>Contenido Instruccional
                         </h4>
-                        <p class="footer-texto mb-2"><strong>Rafael Nelftalí Lizcano Reyes</strong><br /> <span class="text-small">Asesor pedagógico<br /></span></p>
+                        <p class="footer-texto mb-2"><strong>Rafael Nelftalí Lizcano Reyes</strong><br /> <span class="text-small">Asesor metodológico y pedagógico <br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA </span><br /><span class="text-small">Regional Santander </span></p>
                         <p class="footer-texto mb-2"><strong>Marisol Osorio Beltrán</strong><br /><span class="text-small">Experta temática<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de Formación en Diseño Confección y Moda</span><br /><span class="text-small">Regional Antioquia</span></p>
@@ -155,6 +155,7 @@
                         <p class="footer-texto"><strong>Francisco José Lizcano Reyes </strong><br /> <span class="text-small">Responsable del equipo<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
                         <p class="footer-texto"><strong>Leyson Fabian Castaño Perez</strong><br /> <span class="text-small">Integración de recursos y pruebas<br /></span><span class="text-small text-uppercase">centro de comercio y servicios </span><br /><span class="text-small">Regional Tolima</span></p>
                         <p class="footer-texto"><strong>José Jaime Luis Tang Pinzón </strong><br /> <span class="text-small">Diseñador Web<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
+                        <p class="footer-texto"><strong>Juan Daniel polanco Muñoz</strong><br /> <span class="text-small">Diseñador Web<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
                         <p class="footer-texto"><strong>Oleg Litvin</strong><br /> <span class="text-small">Productor Audiovisual<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
                         <p class="footer-texto"><strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
