--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -7,7 +7,7 @@
             <div class="row justify-content-center align-items-center">
                 <div class="sub-ecored"></div>
                 <div class="col-auto"><img class="img-float-1" src="assets/images/pages/ilustraciones/5.jpg" />
-                    <div class="centrado1">Un proyecto es un conjunto de ideas organizadas y planificadas que brindan respuestas a una necesidad identificada en un período de tiempo establecido. Cada proyecto establece un enfoque metodológico dependiendo de los objetivos y alcances. de investigación se caracteriza porque surge de un problema y se plantea a partir de una pregunta problematizadora, o pregunta de investigación, la cual debe ser desarrollada durante la ejecución del proyecto, es muy importante identificar las etapas de un proyecto de investigación, el éxito del proyecto depende de una buena planeación, por lo tanto, es importante conocer cómo están conformadas. En la tabla 1 se relacionan cada una de sus etapas y las acciones que lo comprenden.</div>
+                    <div class="centrado1">Un proyecto es un conjunto de ideas organizadas y planificadas que brindan respuestas a una necesidad identificada en un período de tiempo establecido. <br /> Cada proyecto establece un enfoque metodológico dependiendo de los objetivos y alcances. <br /> <br /> El proyecto de investigación se caracteriza porque surge de un problema y se plantea a partir de una pregunta problematizadora, o pregunta de investigación, la cual debe ser desarrollada durante la ejecución del proyecto, es muy importante identificar las etapas de un proyecto de investigación, el éxito del proyecto depende de una buena planeación, por lo tanto, es importante conocer cómo están conformadas. En la tabla 1 se relacionan cada una de sus etapas y las acciones que lo comprenden.</div>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="col-6 col-md-6">
-                <P class="mt-5">Es el documento que recoge todo el trabajo resultados de la investigación, debe ser breve y preciso en su presentación
+                <P class="mt-5">Es el documento que recoge todo el trabajo resultados de la investigación, debe ser breve y preciso en su presentación.
                 <div class="col-4"><img class="mt-2 img-icon" src="assets/images/pages/ilustraciones/line.jpg" /></div>
                 </P>
             </div>
@@ -160,7 +160,7 @@
                 <div class="col-auto">
                     <div class="contenedor4"><img class="img-float-1" src="assets/images/pages/ilustraciones/18.jpg" />
                         <div class="texto-encima4"></div>
-                        <p class="centrado4 md-6"> Se denomina objetivo general al fin último de la investigación, éste se construye con base en la pregunta de investigación, debe iniciar con un verbo en infinitivo, indicar el alcance, determinar las variables de operación, y brindar respuesta a la pregunta de investigación. Para entender cómo se construye el objetivo general desde la pregunta observemos el siguiente ejemplo: Identificar las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto. <br /> Los objetivos específicos, se plantean como ese conjunto de acciones que permiten cumplir con el objetivo general. Se recomienda que los objetivos específicos oscilan entre tres y cuatro objetivos. Los objetivos deben ser claros, medibles, orientados a la generación de conocimientos, coherentes con el planteamiento del problema y deben contribuir al logro de la investigación. Para mayor claridad es importante tener en cuenta el siguiente ejemplo: Caracterizar las causas de mortalidad infantil en los niños entre 0 y 1 según informes médicos históricos registrados en el Ministerio de Salud.</p>
+                        <p class="centrado4 md-6"> Se denomina objetivo general al fin último de la investigación, este se construye con base en la pregunta de investigación, debe iniciar con un verbo en infinitivo, indicar el alcance, determinar las variables de operación, y brindar respuesta a la pregunta de investigación. Para entender cómo se construye el objetivo general desde la pregunta observemos el siguiente ejemplo: identificar las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto. <br /> Los objetivos específicos, se plantean como ese conjunto de acciones que permiten cumplir con el objetivo general. Se recomienda que los objetivos específicos oscilan entre tres y cuatro objetivos. Los objetivos deben ser claros, medibles, orientados a la generación de conocimientos, coherentes con el planteamiento del problema y deben contribuir al logro de la investigación. <br /> Para mayor claridad es importante tener en cuenta el siguiente ejemplo: caracterizar las causas de mortalidad infantil en los niños entre 0 y 1 según informes médicos históricos registrados en el Ministerio de Salud.</p>
                     </div>
                 </div>
             </div>
