--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="card card_grey">
                     <div class="card-body"><img class="img-a img-icon" src="assets/images/pages/ilustraciones/book.png" />
-                        <P class="text left mt-5">Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras</P>
+                        <P class="text left mt-5">Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras. </P>
                     </div>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                 <h2 class="mt-5" id="tema-32">3.2. Búsqueda de información</h2>
             </div>
             <p>La búsqueda y selección de información es muy importante para sustentar la investigación. Definir los criterios de búsqueda, identificar el tipo de información que sustenta el proyecto investigativo requiere de conocimientos y habilidades para buscar información relevante. </p>
-            <p>Saber buscar significa delimitar el tema con los conceptos relevantes que los sustenta, una vez se tiene claridad al respecto se identifican bases de datos especializadas, y material bibliográfico y cibergráfica relevante a estudiar. Para apoyar las búsquedas de información, en la biblioteca virtual del SENA http://biblioteca.sena.edu.co/, puede encontrar la más importante información a consultar según necesidad.</p>
+            <p>Saber buscar significa delimitar el tema con los conceptos relevantes que los sustenta, una vez se tiene claridad al respecto se identifican bases de datos especializadas, y material bibliográfico y cibergráfica relevante a estudiar. Para apoyar las búsquedas de información, en la biblioteca virtual del SENA <a href="http://biblioteca.sena.edu.co/" target="_blank">http://biblioteca.sena.edu.co//</a> , puede encontrar la más importante información a consultar según necesidad.</p>
         </div>
         <div class="jumbotron bg-5 mt-5">
             <div class="row justify-content-center align-items-center">
