--- a/public/material.html
+++ b/public/material.html
@@ -137,22 +137,15 @@
                         <h1>Introducción</h1>
                     </div>
                     <div class="jumbotron bg-white">
-                        <div class="div-con-fondo">
-                            <div class="row justify-content-center align-items-center">
-                                <div class="col-auto">
-                                    <div class="contenedor"></div><img class="img-float-1" src="assets/images/pages/ilustraciones/1.jpg">
-                                    <div class="texto-encima"></div>
-                                    <div class="centrado color-text"> <strong>La excelencia en el mundo laboral requiere de personas con capacidades extraordinarias, lo que significa hacer algo más de lo ordinario. Hoy además de manejar y entender las aplicaciones tecnológicas, hablar una segunda lengua, aprender conocimientos técnicos especializados y tener una mirada global para soluciones locales, se requiere de capacidades para investigar y organizar el pensamiento con métodos de trabajo enfocados en la solución de problemas y creación de valor en la empresa. La formación para el presente y futuro debe integrar conocimientos básicos en ciencias, capacidad para resolver problemas, manejo de las matemáticas, comunicación y trabajo en equipo, como estrategia fundamental para desempeñarse en cualquier profesión y oficio. (Guijosa, 2018).</strong></div>
-                                </div>
-                            </div>
+                        <div class="row justify-content-center align-items-center">
+                            <div class="col-auto"><iframe width="900" height="500" src="https://www.youtube.com/embed/FR88m8pR3F8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                         </div>
-                        <div class="row justify-content-center mt-5">
-                            <div class="col-4 col-md-5">
-                                <div class="bg-color-azul"><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/2.jpg"></div>
-                            </div>
-                            <div class="col-8 col-md-6">
+                        <div class="row justify-content-center align-items-center mt-5">
+                            <div class="col-auto"> </div>
+                            <div class="bg-blue"><img class="img-a mt-5 img-fluid" src="assets/images/pages/ilustraciones/2.jpg"></div>
+                            <div class="col mt-5">
                                 <p>Este componente formativo tiene como finalidad que el aprendiz desarrolle capacidades argumentativas, propositivas, e interpretativas, a partir de aprender a estructurar el proyecto de investigación de acuerdo con principios y métodos sistemáticos, requeridos para la solución creativa de problemáticas identificadas en el contexto social y productivo</p>
-                                <p>Desde esta perspectiva la investigación es el eje fundamental para el desarrollo de competencias habilitadoras para las profesiones del futuro, el aprender a investigar, buscar información, organizar y gestionar conocimiento en función de resolver problemas y agregar valor en los procesos, es la realidad y necesidad del mercado actual.</p>
+                                <p>Desde esta perspectiva la investigación es el eje fundamental para el desarrollo de competencias habilitadoras para las profesiones del futuro, el aprender a investigar, buscar información, organizar y gestionar conocimiento en función de resolver problemas y agregar valor en los procesos, es la realidad y necesidad del mercado actual. </p>
                             </div>
                         </div>
                     </div>
@@ -180,7 +173,7 @@
                                 <tr>
                                     <td>
                                         <p>El SENA desde su creación ha realizado ejercicios de investigación aplicada en sus procesos de formación, según lo establecido en el Estatuto de Formación Profesional. El objetivo de la investigación en los procesos de formación se enfoca en resolver problemas prácticos, a partir de información primaria o secundaria, análisis de investigaciones y/o desarrollos experimentales que permitan encontrar una solución óptima a los problemas identificados.</p>
-                                        <p>En la formación profesional, la competencia orientar investigación formativa según referentes técnicos, tiene como objetivo que el aprendiz pueda adquirir fundamentos metodológicos en investigación, facilitando así el desarrollo del proyecto formativo y el aprendizaje por proyectos. Desde esta perspectiva la investigación es la base del aprendizaje, nos enseña métodos para organizar el pensamiento, facilita la comprensión de la información, permite descubrir nuevos conocimientos necesarios para el mundo laboral y personal.</p>
+                                        <p>En la formación profesional, la competencia "orientar investigación formativa según referentes técnicos", tiene como objetivo que el aprendiz pueda adquirir fundamentos metodológicos en investigación, facilitando así el desarrollo del proyecto formativo y el aprendizaje por proyectos. Desde esta perspectiva la investigación es la base del aprendizaje, nos enseña métodos para organizar el pensamiento, facilita la comprensión de la información, permite descubrir nuevos conocimientos necesarios para el mundo laboral y personal.</p>
                                     </td>
                                     <td> <img class="img-a my-3 img-icon" src="assets/images/pages/ilustraciones/4.jpg"></td>
                                 </tr>
@@ -290,8 +283,7 @@
                         <h1>Referencias bibliográficas</h1>
                     </div>
                     <div class="jumbotron bg-white referencias">
-                        <p>Guijosa, C. (2018). 7 habilidades necesarias para los trabajos del futuro. https://observatorio.tec.mx/edu-news/7-habilidades-necesarias-para-los-trabajos-del-futuro<a class="ml-2" target="_blank"></a></p>
-                        <hr>
+                        <p class="flex-grow-1">Guijosa, C. (2018). 7 habilidades necesarias para los trabajos del futuro. <a href="https://observatorio.tec.mx/edu-news/7-habilidades-necesarias-para-los-trabajos-del-futuro" target="_blank">https://observatorio.tec.mx/edu-news/7-habilidades-necesarias-para-los-trabajos-del-futuro</a></p>
                         <p>Hernández Sampieri, R., Fernández Collado, C., &amp; Baptista, P. (2014). Metodología de la Investigación. Sexta Edición. Mc Graw Hill.<a class="ml-2" target="_blank"></a></p>
                         <hr>
                         <p>Pérez Rodríguez, G., García Batista, G., Nocedo de León, I., &amp; García Inza, M. L. (2009). Metodología de la investigación educacional<a class="ml-2" target="_blank"></a></p>
@@ -343,19 +335,24 @@
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de Formación en Diseño Confección y Moda</span><br><span class="text-small">Regional Antioquia</span></p>
                         <p class="footer-texto mb-2"><strong>Luz Mila Pacheco Fuente</strong><br /> <span class="text-small">Diseñadora instruccional<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de Diseño y Metrología Regional </span><br><span class="text-small">Regional Distrito Capital</span></p>
-                        <p class="footer-texto mb-2"><strong>Julieth Paola Vital López</strong><br /> <span class="text-small">Revisora de estilo<br /></span></p>
+                        <p class="footer-texto mb-2"><strong>Julieth Paola Vital López</strong><br />
+                            <strong>María Isabel Román Rueda</strong><br /> <span class="text-small">Revisora de estilo<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro para la Industria de la Comunicación Gráfica </span><br><span class="text-small">Regional Distrito Capital</span></p>
+                        <p class="footer-texto mb-2"><strong>María Isabel Román Rueda</strong><br /> <span class="text-small">Revisoras de estilo<br /></span></p>
+                        <p class="footer-texto"><span class="text-small text-uppercase">Centro para la Industria del diseño y la manofactura</span><br><span class="text-small">Regional Santander</span></p>
                     </div>
                     <div class="col-12 col-md-6">
                         <h4 class="footer-subtitulo-2 mt-0">
                             <div class="fa fa-caret-right mr-2"></div>Diseño y desarrollo de recursos educativos digitales
                         </h4>
                         <p class="footer-texto"><strong>Francisco José Lizcano Reyes </strong><br /> <span class="text-small">Responsable del equipo<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
-                        <p class="footer-texto"><strong>Leyson Fabian Castaño Perez</strong><br /> <span class="text-small">Integración de recursos y pruebas<br /></span><span class="text-small text-uppercase">centro de comercio y servicios </span><br><span class="text-small">Regional Tolima</span></p>
-                        <p class="footer-texto"><strong>José Jaime Luis Tang Pinzón </strong><br /> <span class="text-small">Diseñador Web<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
-                        <p class="footer-texto"><strong>Juan Daniel polanco Muñoz</strong><br /> <span class="text-small">Diseñador Web<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
-                        <p class="footer-texto"><strong>Oleg Litvin</strong><br /> <span class="text-small">Productor Audiovisual<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
-                        <p class="footer-texto"><strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
+                        <p class="footer-texto"><strong>Leyson Fabian Castaño Perez</strong><br /> <span class="text-small">Soporte organizacional<br /></span><span class="text-small text-uppercase">centro de comercio y servicios </span><br><span class="text-small">Regional Tolima</span></p>
+                        <p class="footer-texto"><strong>José Jaime Luis Tang Pinzón</strong><br />
+                            <strong>Juan Daniel polanco Muñoz </strong><br />
+                            <strong>Zuleidy María Ruiz Torres</strong><br />
+                            <strong>Oleg Litvin</strong><br />
+                            <span class="text-small">Diseño Web y producción audiovisual</span><br />
+                        <p class="footer-texto"></p><strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br><span class="text-small">Regional Santander</span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
                             <div class="fa fa-caret-right mr-2"></div>Gestores de repositorio
                         </h4>
