--- a/public/pages/introduccion.html
+++ b/public/pages/introduccion.html
@@ -3,22 +3,15 @@
         <h1>Introducción</h1>
     </div>
     <div class="jumbotron bg-white">
-        <div class="div-con-fondo">
-            <div class="row justify-content-center align-items-center">
-                <div class="col-auto">
-                    <div class="contenedor"></div><img class="img-float-1" src="assets/images/pages/ilustraciones/1.jpg" />
-                    <div class="texto-encima"></div>
-                    <div class="centrado color-text"> <strong>La excelencia en el mundo laboral requiere de personas con capacidades extraordinarias, lo que significa hacer algo más de lo ordinario. Hoy además de manejar y entender las aplicaciones tecnológicas, hablar una segunda lengua, aprender conocimientos técnicos especializados y tener una mirada global para soluciones locales, se requiere de capacidades para investigar y organizar el pensamiento con métodos de trabajo enfocados en la solución de problemas y creación de valor en la empresa. La formación para el presente y futuro debe integrar conocimientos básicos en ciencias, capacidad para resolver problemas, manejo de las matemáticas, comunicación y trabajo en equipo, como estrategia fundamental para desempeñarse en cualquier profesión y oficio. (Guijosa, 2018).</strong></div>
-                </div>
-            </div>
+        <div class="row justify-content-center align-items-center">
+            <div class="col-auto"><iframe width="900" height="500" src="https://www.youtube.com/embed/FR88m8pR3F8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen"></iframe></div>
         </div>
-        <div class="row justify-content-center mt-5">
-            <div class="col-4 col-md-5">
-                <div class="bg-color-azul"><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/2.jpg" /></div>
-            </div>
-            <div class="col-8 col-md-6">
+        <div class="row justify-content-center align-items-center mt-5">
+            <div class="col-auto"> </div>
+            <div class="bg-blue"><img class="img-a mt-5 img-fluid" src="assets/images/pages/ilustraciones/2.jpg" /></div>
+            <div class="col mt-5">
                 <p>Este componente formativo tiene como finalidad que el aprendiz desarrolle capacidades argumentativas, propositivas, e interpretativas, a partir de aprender a estructurar el proyecto de investigación de acuerdo con principios y métodos sistemáticos, requeridos para la solución creativa de problemáticas identificadas en el contexto social y productivo</p>
-                <p>Desde esta perspectiva la investigación es el eje fundamental para el desarrollo de competencias habilitadoras para las profesiones del futuro, el aprender a investigar, buscar información, organizar y gestionar conocimiento en función de resolver problemas y agregar valor en los procesos, es la realidad y necesidad del mercado actual.</p>
+                <p>Desde esta perspectiva la investigación es el eje fundamental para el desarrollo de competencias habilitadoras para las profesiones del futuro, el aprender a investigar, buscar información, organizar y gestionar conocimiento en función de resolver problemas y agregar valor en los procesos, es la realidad y necesidad del mercado actual. </p>
             </div>
         </div>
     </div>
