--- a/public/pages/referencias.html
+++ b/public/pages/referencias.html
@@ -3,8 +3,7 @@
         <h1>Referencias bibliográficas</h1>
     </div>
     <div class="jumbotron bg-white referencias">
-        <p>Guijosa, C. (2018). 7 habilidades necesarias para los trabajos del futuro. https://observatorio.tec.mx/edu-news/7-habilidades-necesarias-para-los-trabajos-del-futuro<a class="ml-2" target="_blank"></a></p>
-        <hr />
+        <p class="flex-grow-1">Guijosa, C. (2018). 7 habilidades necesarias para los trabajos del futuro. <a href="https://observatorio.tec.mx/edu-news/7-habilidades-necesarias-para-los-trabajos-del-futuro" target="_blank">https://observatorio.tec.mx/edu-news/7-habilidades-necesarias-para-los-trabajos-del-futuro</a></p>
         <p>Hernández Sampieri, R., Fernández Collado, C., &amp; Baptista, P. (2014). Metodología de la Investigación. Sexta Edición. Mc Graw Hill.<a class="ml-2" target="_blank"></a></p>
         <hr />
         <p>Pérez Rodríguez, G., García Batista, G., Nocedo de León, I., &amp; García Inza, M. L. (2009). Metodología de la investigación educacional<a class="ml-2" target="_blank"></a></p>
