--- a/public/ruta.html
+++ b/public/ruta.html
@@ -145,19 +145,24 @@
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de Formación en Diseño Confección y Moda</span><br /><span class="text-small">Regional Antioquia</span></p>
                         <p class="footer-texto mb-2"><strong>Luz Mila Pacheco Fuente</strong><br /> <span class="text-small">Diseñadora instruccional<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de Diseño y Metrología Regional </span><br /><span class="text-small">Regional Distrito Capital</span></p>
-                        <p class="footer-texto mb-2"><strong>Julieth Paola Vital López</strong><br /> <span class="text-small">Revisora de estilo<br /></span></p>
+                        <p class="footer-texto mb-2"><strong>Julieth Paola Vital López</strong><br />
+                            <strong>María Isabel Román Rueda</strong><br /> <span class="text-small">Revisora de estilo<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro para la Industria de la Comunicación Gráfica </span><br /><span class="text-small">Regional Distrito Capital</span></p>
+                        <p class="footer-texto mb-2"><strong>María Isabel Román Rueda</strong><br /> <span class="text-small">Revisoras de estilo<br /></span></p>
+                        <p class="footer-texto"><span class="text-small text-uppercase">Centro para la Industria del diseño y la manofactura</span><br /><span class="text-small">Regional Santander</span></p>
                     </div>
                     <div class="col-12 col-md-6">
                         <h4 class="footer-subtitulo-2 mt-0">
                             <div class="fa fa-caret-right mr-2"></div>Diseño y desarrollo de recursos educativos digitales
                         </h4>
                         <p class="footer-texto"><strong>Francisco José Lizcano Reyes </strong><br /> <span class="text-small">Responsable del equipo<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
-                        <p class="footer-texto"><strong>Leyson Fabian Castaño Perez</strong><br /> <span class="text-small">Integración de recursos y pruebas<br /></span><span class="text-small text-uppercase">centro de comercio y servicios </span><br /><span class="text-small">Regional Tolima</span></p>
-                        <p class="footer-texto"><strong>José Jaime Luis Tang Pinzón </strong><br /> <span class="text-small">Diseñador Web<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
-                        <p class="footer-texto"><strong>Juan Daniel polanco Muñoz</strong><br /> <span class="text-small">Diseñador Web<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
-                        <p class="footer-texto"><strong>Oleg Litvin</strong><br /> <span class="text-small">Productor Audiovisual<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
-                        <p class="footer-texto"><strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
+                        <p class="footer-texto"><strong>Leyson Fabian Castaño Perez</strong><br /> <span class="text-small">Soporte organizacional<br /></span><span class="text-small text-uppercase">centro de comercio y servicios </span><br /><span class="text-small">Regional Tolima</span></p>
+                        <p class="footer-texto"><strong>José Jaime Luis Tang Pinzón</strong><br />
+                            <strong>Juan Daniel polanco Muñoz </strong><br />
+                            <strong>Zuleidy María Ruiz Torres</strong><br />
+                            <strong>Oleg Litvin</strong><br />
+                            <span class="text-small">Diseño Web y producción audiovisual</span><br />
+                        <p class="footer-texto"></p><strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
                             <div class="fa fa-caret-right mr-2"></div>Gestores de repositorio
                         </h4>
