--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="sub-line mt-5">
-            <h2 id="tema-21">2.1. Tema e idea de investigación</h2>
+            <h2 id="tema-21">2.1 Tema e idea de investigación</h2>
         </div>
         <div class="jumbotron bg-5 mt-5">
             <div class="row justify-content-center align-items-center">
