--- a/public/index.html
+++ b/public/index.html
@@ -134,8 +134,7 @@
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de Formación en Diseño Confección y Moda</span><br /><span class="text-small">Regional Antioquia</span></p>
                         <p class="footer-texto mb-2"><strong>Luz Mila Pacheco Fuente</strong><br /> <span class="text-small">Diseñadora instruccional<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de Diseño y Metrología Regional </span><br /><span class="text-small">Regional Distrito Capital</span></p>
-                        <p class="footer-texto mb-2"><strong>Julieth Paola Vital López</strong><br />
-                            <strong>María Isabel Román Rueda</strong><br /> <span class="text-small">Revisora de estilo<br /></span></p>
+                        <p class="footer-texto mb-2"><strong>Julieth Paola Vital López</strong><br /> <span class="text-small">Revisora de estilo<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro para la Industria de la Comunicación Gráfica </span><br /><span class="text-small">Regional Distrito Capital</span></p>
                         <p class="footer-texto mb-2"><strong>María Isabel Román Rueda</strong><br /> <span class="text-small">Revisoras de estilo<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro para la Industria del diseño y la manofactura</span><br /><span class="text-small">Regional Santander</span></p>
@@ -151,7 +150,7 @@
                             <strong>Zuleidy María Ruiz Torres</strong><br />
                             <strong>Oleg Litvin</strong><br />
                             <span class="text-small">Diseño Web y producción audiovisual</span><br />
-                        <p class="footer-texto"></p><strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
+                        <p class="footer-texto"></p><strong>Gustavo Adolfo Marún Suárez</strong><br /><span class="text-small">Desarrollador Front End<br /></span><span class="text-small text-uppercase">Centro Industrial Del Diseño Y La Manufactura</span><br /><span class="text-small">Regional Santander</span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
                             <div class="fa fa-caret-right mr-2"></div>Gestores de repositorio
                         </h4>
