--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -147,7 +147,7 @@
                 <div class="centrado3"> <strong>La pregunta debe ser concreta en el tema abordar, determina un alcance, identifica el problema, reconoce la población o los elementos objeto estudio, delimita un espacio y tiempo. Ejemplo: ¿cuáles son las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto?</strong></div>
             </div>
             <div class="col-8 col-md-6">
-                <p class="mt-8">A de la pregunta se construye el fundamento metodológico, se determinan los objetivos, se establece el marco teórico, se determina el nivel y profundidad, se caracteriza la población objeto de estudio, se determinan los métodos, técnicas e instrumentos de investigación. Antes de determinar la pregunta de investigación es importante realizar lecturas sobre el tema, identificar ideas importantes de la situación problémica, entender el contexto y delimitar la investigación. Para ampliar el tema puede observar el video sobre la pregunta de investigación.</p>
+                <p class="mt-8">A partir de la pregunta se construye el fundamento metodológico, se determinan los objetivos, se establece el marco teórico, se determina el nivel y profundidad, se caracteriza la población objeto de estudio, se determinan los métodos, técnicas e instrumentos de investigación. Antes de determinar la pregunta de investigación es importante realizar lecturas sobre el tema, identificar ideas importantes de la situación problémica, entender el contexto y delimitar la investigación. Para ampliar el tema puede observar el video sobre la pregunta de investigación.</p>
                 <p class="mt-3">Para ampliar el tema puede observar el video sobre la pregunta de investigación.</p>
             </div>
         </div>
